// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/component \`PENDING\` renders 1`] = `
<$default
  definitions={Array []}
  onChange={[MockFunction]}
  onSubmit={[MockFunction]}
/>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/component \`REJECTED\` renders 1`] = `
<Rejected
  message="MOCK MESSAGE"
  name="MOCK NAME"
/>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/component \`RESOLVED\` renders 1`] = `
<Resolved
  definitions={Array []}
  onChange={[MockFunction]}
  onSubmit={[MockFunction]}
/>
`;

exports[`@modernpoacher/zashiki-react-redux/app/components/stages/alpha/component renders 1`] = `
<Resolved
  definitions={Array []}
  onChange={[MockFunction]}
  onSubmit={[MockFunction]}
/>
`;
